@startuml
class ucf.assignments.SaveData {
- ArrayList<Task> list
+ ArrayList<Task> getList()
}
class ucf.assignments.Task {
# SimpleStringProperty Task
# SimpleStringProperty Description
# SimpleStringProperty DueDate
# SimpleStringProperty Priority
+ String getTask()
+ void setTask(String)
+ String getDescription()
+ void setDescription(String)
+ String getDueDate()
+ void setDueDate(String)
+ String getPriority()
+ void setPriority(String)
}
class ucf.assignments.App {
~ double x
+ void start(Stage)
+ {static} void main(String[])
}
class ucf.assignments.Controller {
- TextField PriorityField
- Button btnAdd
- Button btnComplete
- Button btnCreateList
- Button btnDashboard
- Button btnDelete
- Button btnDone
- Button btnEdit
- Button btnLoad
- Button btnSave
- Button btnRemove
- Button btnToday1
- Label incompleteWidget
- Label totalTasksWidget
- DatePicker dateField
- TextField newTask
- TextField descriptionField
- Pane pnlComplete
- Pane pnlIncomplete
- Pane pnlOverview
- TableView<Task> incompletedTbl
- TableView<Task> todoListTbl
- TableColumn tcTask
- TableColumn tcDescription
- TableColumn tcDueDate
- TableColumn tcPriority
- TableColumn iTask
- TableColumn iDescription
- TableColumn iDueDate
- TableColumn iPriority
- ObservableList<Task> todoTasks
- ObservableList<Task> incompleteTasks
- ObservableList<Task> completeTbl
~ String task
~ String description
~ String dueDateStr
~ String priority
~ void completePane(MouseEvent)
~ void dashboardPane(MouseEvent)
~ void incompletePane(MouseEvent)
~ void addTask(MouseEvent)
~ void clearFields()
~ void editTask(MouseEvent)
~ void deleteTask(MouseEvent)
~ void refreshValues()
~ void editConfirm()
~ void handleButtonClick(ActionEvent)
~ void removeList(MouseEvent)
~ void saveList(MouseEvent)
~ void loadList(MouseEvent)
~ void setEditable()
+ void initialize()
}


java.io.Serializable <|.. ucf.assignments.SaveData
java.io.Serializable <|.. ucf.assignments.Task
javafx.application.Application <|-- ucf.assignments.App
@enduml